// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bone /> Snapshots when it animated is false should render correctly 1`] = `
<span
  className="css-k0l607-Bone elmmzfo0"
  height="2"
  width="100%"
/>
`;

exports[`<Bone /> Snapshots when it has empty props should render correctly 1`] = `
<span
  className="css-17hy2y8-Bone elmmzfo0"
  height="2"
  width="100%"
/>
`;

exports[`<Bone /> Snapshots when it has width and height should render correctly 1`] = `
<span
  className="css-4kqhl-Bone elmmzfo0"
  height="1rem"
  width="1rem"
/>
`;
